changing home display text

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Jawahar reddy</span>
-                  <span>Full stack Developer</span>
-                  <span>Working as a Freelance</span>
+                  <span>SAP Full stack Developer</span>
+                  <span>also a AI,ML Engineer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
